docs: add swagger document with store
